attempt to create user object
